--- a/findjobs.html
+++ b/findjobs.html
@@ -187,7 +187,7 @@
                         <div class="col border-bottom">
                             <h4>$10-$30</h4>
                             <br>
-                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="#"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -198,7 +198,7 @@
                         <div class="col border-bottom">
                             <h4>$30-$40/Hour</h4>
                             <br>
-                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="#"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -209,7 +209,7 @@
                         <div class="col border-bottom">
                             <h4>$70</h4>
                             <br>
-                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="#"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -220,7 +220,7 @@
                         <div class="col border-bottom">
                             <h4>$10-$20/Hour</h4>
                             <br>
-                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="#"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -231,7 +231,7 @@
                         <div class="col border-bottom">
                             <h4>$7/Hour</h4>
                             <br>
-                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="#"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -242,7 +242,7 @@
                         <div class="col border-bottom">
                             <h4>$1500</h4>
                             <br>
-                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="#"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -253,7 +253,7 @@
                         <div class="col border-bottom">
                             <h4>$1900</h4>
                             <br>
-                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="#"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -264,7 +264,7 @@
                         <div class="col border-bottom">
                             <h4>$15/Hour</h4>
                             <br>
-                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="#"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -275,7 +275,7 @@
                         <div class="col border-bottom">
                             <h4>$75</h4>
                             <br>
-                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="#"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -286,7 +286,7 @@
                         <div class="col border-bottom">
                             <h4>$17/Hour</h4>
                             <br>
-                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="#"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -297,7 +297,7 @@
                         <div class="col border-bottom">
                             <h4>$80</h4>
                             <br>
-                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="#"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -308,7 +308,7 @@
                         <div class="col border-bottom">
                             <h4>$8420</h4>
                             <br>
-                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="#"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                    <br><div class="row">
@@ -319,7 +319,7 @@
                         <div class="col border-bottom">
                             <h4>$400</h4>
                             <br>
-                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="#"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -330,7 +330,7 @@
                         <div class="col border-bottom">
                             <h4>$100</h4>
                             <br>
-                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="#"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -341,7 +341,7 @@
                         <div class="col border-bottom">
                             <h4>$40-$50</h4>
                             <br>
-                            <a href="#"><button class="btn btn-primary-outline PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="#"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                 </div>
