--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                             <div class="card mb-4 shadow-sm">
                                 <div class="image">
                                     <img class="image__img" src="img/jobs/illustrator.jpg" class="d-block w-100" style="max-width: 100%;"></img>
-                                    <a class="image__overlay" href="">
+                                    <a class="image__overlay" href="illustrator">
                                         <button type="button" class="btn btn-light">MORE INFO</button>
                                     </a>
                                 </div>
@@ -346,7 +346,7 @@
                             <div class="card mb-4 shadow-sm">
                                 <div class="image">
                                     <img class="image__img" src="img/jobs/wordpress.jpg" class="d-block w-100" style="max-width: 100%;"></img>
-                                    <a class="image__overlay" href="illustrator.html">
+                                    <a class="image__overlay" href="wordpress.html">
                                         <button type="button" class="btn btn-light">MORE INFO</button>
                                     </a>
                                 </div>
