--- a/index.html
+++ b/index.html
@@ -32,27 +32,11 @@
                                 <li class="nav-item active">
                                     <a class="nav-link" href="#">How It Works<span class="sr-only">(current)</span></a>
                                 </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Find Jobs
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="#">By Skill</a>
-                                        <a class="dropdown-item" href="#">By Language</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#">Featured Jobs</a>
-                                    </div>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="findjobs.html">Find Job<span class="sr-only"></span></a>
                                 </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Hire Freelancers
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="#">By Skill</a>
-                                        <a class="dropdown-item" href="#">By Language</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#">Featured Jobs</a>
-                                    </div>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="findfreelancers.html">Find Freelancers<span class="sr-only"></span></a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
