--- a/index.html
+++ b/index.html
@@ -38,32 +38,11 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="findfreelancers.html">Find Freelancers<span class="sr-only"></span></a>
                                 </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Get Ideas
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="#">Web Design</a>
-                                        <a class="dropdown-item" href="#">Product Design</a>
-                                        <a class="dropdown-item" href="#">Package Design</a>
-                                        <a class="dropdown-item" href="#">Logo Design</a>
-                                        <a class="dropdown-item" href="#">Graphics Design</a>
-                                        <a class="dropdown-item" href="#">Mobile App</a>
-                                        <a class="dropdown-item" href="#">3D Modelling</a>
-                                        <a class="dropdown-item" href="#">Ilustration</a>
-                                        <a class="dropdown-item" href="#">Branding</a>
-                                        <a class="dropdown-item" href="#">Wordpress</a>
-                                    </div>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#TopJobs">Top Jobs<span class="sr-only"></span></a>
                                 </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        About
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="#">Membership</a>
-                                        <a class="dropdown-item" href="#">Preferred Freelancer Program</a>
-                                        <a class="dropdown-item" href="#">Get Verified</a>
-                                    </div>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="about.html">About Us<span class="sr-only"></span></a>
                                 </li>
                             </ul>
                             <form class="form-inline my-2 my-lg-0">
@@ -224,7 +203,7 @@
                 </button>
             </div>
             
-            <div class="album py-5 bg-light">
+            <div class="album py-5 bg-light" id="TopJobs">
                 <div class="container">
             
                     <div class="row">
