enter about us text

--- a/about.html
+++ b/about.html
@@ -17,7 +17,8 @@
             <div class="text">
                 <h1>About Us</h1>
                 <h5>Web Programming</h5>
-                <p>pintu kemana saja</p>
+                <p><b>Freelancing</b> is an online job marketplace that provides a means for clients and freelancers around the globe to collaborate for mutual benefit. Individuals or businesses in need of skilled help for short or long-term projects can post those projects and allow freelancers to submit bids for the completion of the work.</p>
+                <p>For the <b>client</b> or service buyer, Freelancer.com provides immediate access to thousands of independent contractors with specific skills, without the need to place job ads or provide work space, insurance, etc. For the <b>freelancer</b> or service provider, Freelancer.com offers a constant source of part-time to full-time work opportunities, without the trouble and expenses of advertising and self-promotion. </p>
                 <a href="index.html">
                     <button type="button">Back To Website</button>
                 </a>
