--- a/about.html
+++ b/about.html
@@ -24,7 +24,13 @@
                 </a>
             </div>
         </div>
-
+        <div class="google-map-link"><a class="Location__StyledAnchor-hveuoR acHWG Anchor__Anchor-goxHTO bxuGhH" href="https://www.google.com/maps/place/San+Jose+Civic/@37.3305926,-121.8896374,19.43z/data=!3m1!5s0x808fccbab9db63c7:0xb8099f9c7c2c0280!4m5!3m4!1s0x808fccbaba87c049:0x5c7261fe52871edf!8m2!3d37.3308292!4d-121.8897476" target="_blank" rel="noopener noreferrer">View in Google Map</a></div>
+                        <div class="col-md-12">
+                            <div id="map-container-google" class="z-depth-1-half map-container-2">
+                            <iframe src="https://maps.google.com/maps?q=cgv%20central%20park&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
+                              style="border:0" allowfullscreen></iframe>
+                          </div>
+                        </div>
     </section>
 </body>
 </html>
